djvu-html5/war/Djvu_html5.css
body {
	margin: 0px;
}

#djvuContainer {
	width: 100%;
	height: 100%;
}

.toolbar {
	overflow: hidden;
	position: absolute;
	height: 40px;
	top: 10px;
	left: 50%;
	transform: translate(-50%, 0);
	-webkit-transition: top 0.3s;
	transition: top 0.3s;
}

.toolbarHidden {
	top: -40px;
	-webkit-transition: top 1s;
	transition: top 1s;
}

.content {
	overflow: hidden;
	position: absolute;
	height: 100%;
	width: 100%;
}

.toolbarSquareButton {
	width: 40px;
	height: 40px;
	background-repeat: no-repeat;
	background-size: contain;
}

.buttonZoomIn {
	background-image: url("img/zoom-in.png");
}

.buttonZoomOut {
	background-image: url("img/zoom-out.png");
}

.buttonPagePrev {
	background-image: url("img/page-prev.png");
}

.buttonPageNext {
	background-image: url("img/page-next.png");
}

.toolbarDivisor {
	margin-left: 30px;
}

.comboBox {
	position: relative;
	top: -12px;
	vertical-align: bottom;
}

.comboBoxSelection {
	min-width: 70px;
}

.comboBoxText {
	position: absolute;
	left: 2px;
	top: 2px;
	bottom: 0px;
	width: 55px;
	border: none;
	padding: 0px;
	outline: none;
}

